--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "tools",
   "version": "1.0.0",
   "scripts": {
-    "start": "echo \"NPM Script not implemented\" && exit 1"
+
+    "start": "webpack --mode development",
+    "build": "webpack --mode production"
+  
   },
   "devDependencies": {
     "webpack": "^5.72.0",
