--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "tools",
   "version": "1.0.0",
   "scripts": {
-
     "start": "webpack --mode development",
     "build": "webpack --mode production"
-  
   },
   "devDependencies": {
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "html-webpack-plugin": "^5.5.0",
+    "save-dev": "^0.0.1-security"
+  }
 }
