style webpack config

--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "tools",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack serve cd--mode development",
+    "start": "webpack serve --mode development",
     "build": "webpack --mode production"
   },
   "devDependencies": {
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
