--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "devDependencies": {
     "css-loader": "^6.7.1",
+    "loader": "^2.1.1",
     "mini-css-extract-plugin": "^2.6.0",
+    "sass": "^1.50.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
@@ -16,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "html-webpack-plugin": "^5.5.0",
+    "sass-loader": "^12.6.0",
     "save-dev": "^0.0.1-security"
   }
 }
