--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "scripts": {
     "start": "webpack serve --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "format": "prettier --write ./src/*"
   },
   "devDependencies": {
     "css-loader": "^6.7.1",
     "loader": "^2.1.1",
     "mini-css-extract-plugin": "^2.6.0",
+    "prettier": "^2.6.2",
     "sass": "^1.50.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
