--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "format": "prettier --write ./src/*"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "css-loader": "^6.7.1",
+    "eslint": "^8.13.0",
     "loader": "^2.1.1",
     "mini-css-extract-plugin": "^2.6.0",
     "prettier": "^2.6.2",
