--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@typescript-eslint/parser": "^5.18.0",
     "css-loader": "^6.7.1",
     "eslint": "^8.13.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "loader": "^2.1.1",
     "mini-css-extract-plugin": "^2.6.0",
     "prettier": "^2.6.2",
